--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: wumu's blog
-subtitle: wumu的博客
-description: 起风了，唯有努力生存
+title: 梧木的博客
+subtitle: 梧木的博客
+description: 长大以后，成为更强大的自己
 keywords: blog
 author: wumu
 language: zh-CN
@@ -14,7 +14,10 @@ language: zh-CN
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://wumuwumu.github.io
 root: /
-permalink: :year/:month/:day/:title/
+permalink: posts/:abbrlink.html
+abbrlink:
+    alg: crc32   #算法： crc16(default) and crc32
+    rep: hex     #进制： dec(default) and hex
 permalink_defaults:
 
 # Directory
